add /tag endpoint + open-api documentation
